tests/logical/logical.exp
Error ---------------------------------------------------------- logical.js:8:12

Error: logical.js:8
  8:     return x && '123';
                ^ Cannot return `x && '123'` because boolean [1] is incompatible with number [2].
  References:
    7:     var x = false;
                   ^^^^^ [1]: boolean
    6: function logical1a(): number { // expected `: boolean`
                             ^^^^^^ [2]: number

Error --------------------------------------------------------- logical.js:23:12

Error: logical.js:23
 23:     return false && '123';
                ^^^^^ Cannot return `false && '123'` because boolean [1] is incompatible with number [2].
  References:
   23:     return false && '123';
                  ^^^^^ [1]: boolean
   22: function logical2a(): number { // expected `: boolean`
                             ^^^^^^ [2]: number

Error -------------------------------------------------------- logical.js:101:12

Error: logical.js:101
101:     return x != null && x > 10;
                ^^^^^^^^^ Cannot return `(x != null) && (x > 10)` because boolean [1] is incompatible with string [2].
  References:
  101:     return x != null && x > 10;
                  ^^^^^^^^^ [1]: boolean
   99: function logical3a(): string { // expected `: boolean`
                             ^^^^^^ [2]: string

Error -------------------------------------------------------- logical.js:101:25

Error: logical.js:101
101:     return x != null && x > 10;
                             ^^^^^^ Cannot return `(x != null) && (x > 10)` because boolean [1] is incompatible with string [2].
  References:
  101:     return x != null && x > 10;
                               ^^^^^^ [1]: boolean
   99: function logical3a(): string { // expected `: boolean`
                             ^^^^^^ [2]: string

Error -------------------------------------------------------- logical.js:109:12

Error: logical.js:109
109:     return x != null && x;
                ^^^^^^^^^ Cannot return `(x != null) && x` because boolean [1] is incompatible with number [2].
  References:
  109:     return x != null && x;
                  ^^^^^^^^^ [1]: boolean
  107: function logical3b(): number { // expected `: boolean | number`
                             ^^^^^^ [2]: number

Error -------------------------------------------------------- logical.js:117:12

Error: logical.js:117
117:     return x != undefined && x;
                ^^^^^^^^^^^^^^ Cannot return `(x != undefined) && x` because boolean [1] is incompatible with number [2].
  References:
  117:     return x != undefined && x;
                  ^^^^^^^^^^^^^^ [1]: boolean
  115: function logical3c(): ?number { // expected `: boolean | ?number`
                              ^^^^^^ [2]: number

Error -------------------------------------------------------- logical.js:124:12

Error: logical.js:124
124:     return x && '123';
                ^ Cannot return `x && '123'` because boolean [1] is incompatible with string [2].
  References:
  123: function logical4(x: boolean): string { // expected `: boolean | string`
                            ^^^^^^^ [1]: boolean
  123: function logical4(x: boolean): string { // expected `: boolean | string`
                                      ^^^^^^ [2]: string

Error -------------------------------------------------------- logical.js:148:12

Error: logical.js:148
148:     return x || 0;
                ^ Cannot return `x || 0` because boolean [1] is incompatible with string [2].
  References:
  147:     var x = true;
                   ^^^^ [1]: boolean
  146: function logical5c(): string { // expected `: boolean`
                             ^^^^^^ [2]: string

Error -------------------------------------------------------- logical.js:176:12

Error: logical.js:176
176:     return true || '123';
                ^^^^ Cannot return `true || '123'` because boolean [1] is incompatible with number [2].
  References:
  176:     return true || '123';
                  ^^^^ [1]: boolean
  175: function logical6d(): number { // expected `: boolean`
                             ^^^^^^ [2]: number

Error -------------------------------------------------------- logical.js:281:12

Error: logical.js:281
281:     return x || (1 && 'foo');
                ^ Cannot return `x || (1 && 'foo')` because boolean [1] is incompatible with string [2].
  References:
  280:     var x = true;
                   ^^^^ [1]: boolean
  279: function logical8f(): string { // expected `: boolean`
                             ^^^^^^ [2]: string

Error: logical.js:291
291:     return x || y || false;
                          ^^^^^ boolean. This type is incompatible with the expected return type of
290: ): number | string { // expected `: number | string | boolean`
        ^^^^^^^^^^^^^^^ union: number | string
  Member 1:
  290: ): number | string { // expected `: number | string | boolean`
          ^^^^^^ number
  Error:
  291:     return x || y || false;
                            ^^^^^ boolean. This type is incompatible with
  290: ): number | string { // expected `: number | string | boolean`
          ^^^^^^ number
  Member 2:
  290: ): number | string { // expected `: number | string | boolean`
                   ^^^^^^ string
  Error:
  291:     return x || y || false;
                            ^^^^^ boolean. This type is incompatible with
  290: ): number | string { // expected `: number | string | boolean`
                   ^^^^^^ string

Error: logical.js:315
315:     return x && y && false;
                          ^^^^^ boolean. This type is incompatible with the expected return type of
314: ): number | string { // expected `: number | string | boolean`
        ^^^^^^^^^^^^^^^ union: number | string
  Member 1:
  314: ): number | string { // expected `: number | string | boolean`
          ^^^^^^ number
  Error:
  315:     return x && y && false;
                            ^^^^^ boolean. This type is incompatible with
  314: ): number | string { // expected `: number | string | boolean`
          ^^^^^^ number
  Member 2:
  314: ): number | string { // expected `: number | string | boolean`
                   ^^^^^^ string
  Error:
  315:     return x && y && false;
                            ^^^^^ boolean. This type is incompatible with
  314: ): number | string { // expected `: number | string | boolean`
                   ^^^^^^ string

Error -------------------------------------------------------- logical.js:322:12

Error: logical.js:322
322:     return false && x && y;
                ^^^^^ Cannot return `false && x && y` because boolean [1] is incompatible with array type [2].
  References:
  322:     return false && x && y;
                  ^^^^^ [1]: boolean
  321: function logical10b(x: number, y: string): Array<any> { // expected `: boolean`
                                                  ^^^^^^^^^^ [2]: array type

Error -------------------------------------------------------- logical.js:329:12

Error: logical.js:329
329:     return x && false && y;
                ^ Cannot return `x && false && y` because number [1] is incompatible with array type [2].
  References:
  328: function logical10c(x: number, y: string): Array<any> { // expected `number | boolean`
                              ^^^^^^ [1]: number
  328: function logical10c(x: number, y: string): Array<any> { // expected `number | boolean`
                                                  ^^^^^^^^^^ [2]: array type

Error -------------------------------------------------------- logical.js:329:17

Error: logical.js:329
329:     return x && false && y;
                     ^^^^^ Cannot return `x && false && y` because boolean [1] is incompatible with array type [2].
  References:
  329:     return x && false && y;
                       ^^^^^ [1]: boolean
  328: function logical10c(x: number, y: string): Array<any> { // expected `number | boolean`
                                                  ^^^^^^^^^^ [2]: array type

Error -------------------------------------------------------- logical.js:348:18

Error: logical.js:348
348:         y = y || true; // expected a number
                      ^^^^ Cannot assign `y || true` to `y` because boolean [1] is incompatible with number [2].
  References:
  348:         y = y || true; // expected a number
                        ^^^^ [1]: boolean
  346: function logical11b(y: number): number {
                              ^^^^^^ [2]: number

Error -------------------------------------------------------- logical.js:348:18

Error: logical.js:348
348:         y = y || true; // expected a number
                      ^^^^ boolean [1] is incompatible with number [2].
  References:
  348:         y = y || true; // expected a number
                        ^^^^ [1]: boolean
  346: function logical11b(y: number): number {
                              ^^^^^^ [2]: number

Error -------------------------------------------------------- logical.js:363:12

Error: logical.js:363
363:     return y;
                ^ Cannot return `y` because boolean [1] is incompatible with number [2].
  References:
  361:         z = false;
                   ^^^^^ [1]: boolean
  356: function logical12a(): number {
                              ^^^^^^ [2]: number

Error -------------------------------------------------------- logical.js:371:18

Error: logical.js:371
371:         y = y && true; // expected a number
                      ^^^^ Cannot assign `y && true` to `y` because boolean [1] is incompatible with number [2].
  References:
  371:         y = y && true; // expected a number
                        ^^^^ [1]: boolean
  369: function logical12b(y: number): number {
                              ^^^^^^ [2]: number

Error -------------------------------------------------------- logical.js:371:18

Error: logical.js:371
371:         y = y && true; // expected a number
                      ^^^^ boolean [1] is incompatible with number [2].
  References:
  371:         y = y && true; // expected a number
                        ^^^^ [1]: boolean
  369: function logical12b(y: number): number {
                              ^^^^^^ [2]: number

Error -------------------------------------------------------- logical.js:381:13

Error: logical.js:381
381:         {x: x && "bar"},
                 ^ Cannot return array literal because in type argument `T` and then property `x`, number [1] is incompatible with string [2].
  References:
  379: function logical13(x: number): Array<{x: string}> {
                             ^^^^^^ [1]: number
  379: function logical13(x: number): Array<{x: string}> {
                                                ^^^^^^ [2]: string

Error -------------------------------------------------------- logical.js:383:21

Error: logical.js:383
383:         {x: true && false},
                         ^^^^^ Cannot return array literal because in type argument `T` and then property `x`, boolean [1] is incompatible with string [2].
  References:
  383:         {x: true && false},
                           ^^^^^ [1]: boolean
  379: function logical13(x: number): Array<{x: string}> {
                                                ^^^^^^ [2]: string

Error -------------------------------------------------------- logical.js:384:13

Error: logical.js:384
384:         {x: false && false},
                 ^^^^^ Cannot return array literal because in type argument `T` and then property `x`, boolean [1] is incompatible with string [2].
  References:
  384:         {x: false && false},
                   ^^^^^ [1]: boolean
  379: function logical13(x: number): Array<{x: string}> {
                                                ^^^^^^ [2]: string

Error -------------------------------------------------------- logical.js:397:13

Error: logical.js:397
397:         {x: x || "bar"},
                 ^ Cannot return array literal because in type argument `T` and then property `x`, number [1] is incompatible with string [2].
  References:
  395: function logical14(x: number): Array<{x: string}> {
                             ^^^^^^ [1]: number
  395: function logical14(x: number): Array<{x: string}> {
                                                ^^^^^^ [2]: string

Error -------------------------------------------------------- logical.js:399:22

Error: logical.js:399
399:         {x: false || true},
                          ^^^^ Cannot return array literal because in type argument `T` and then property `x`, boolean [1] is incompatible with string [2].
  References:
  399:         {x: false || true},
                            ^^^^ [1]: boolean
  395: function logical14(x: number): Array<{x: string}> {
                                                ^^^^^^ [2]: string

Error -------------------------------------------------------- logical.js:400:13

Error: logical.js:400
400:         {x: true || false},
                 ^^^^ Cannot return array literal because in type argument `T` and then property `x`, boolean [1] is incompatible with string [2].
  References:
  400:         {x: true || false},
                   ^^^^ [1]: boolean
  395: function logical14(x: number): Array<{x: string}> {
                                                ^^^^^^ [2]: string

Error -------------------------------------------------------- logical.js:510:11

Error: logical.js:510
510:   return (x.y && x.z); // error: x.y is a string
               ^^^ Cannot return `x.y && x.z` because string [1] is incompatible with boolean [2].
  References:
  509: function logical19a(x: { y: string, z: boolean }): boolean {
                                   ^^^^^^ [1]: string
  509: function logical19a(x: { y: string, z: boolean }): boolean {
                                                          ^^^^^^^ [2]: boolean

Error -------------------------------------------------------- logical.js:513:11

Error: logical.js:513
513:   return (x.y || x.z); // error: x.y is a string
               ^^^ Cannot return `x.y || x.z` because string [1] is incompatible with boolean [2].
  References:
  512: function logical19b(x: { y: string, z: boolean }): boolean {
                                   ^^^^^^ [1]: string
  512: function logical19b(x: { y: string, z: boolean }): boolean {
                                                          ^^^^^^^ [2]: boolean


Found 28 errors
